changed preview image, also set min height for pages to prevent issue where menu jumps on shorter pages

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -22,6 +22,7 @@ body {
 .outer-wrapper {
   width: 80%;
   top: 0;
+  min-height: 80vh;
 }
 
 .page-wrapper {
